pkg/lang/testdata/ub/constraints/invalid/unknown-key.ub
constraints: [
  { kind: required-together, fields: [input.a, input.b], message: 'x' },
]
